{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 14,
  "lineage": "0391cd43-4055-f31e-ee26-b0805fd48ccc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project8-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452076483511:internet-gateway/igw-0f313309df4452d7b",
            "id": "igw-0f313309df4452d7b",
            "owner_id": "452076483511",
            "tags": {
              "Name": "project8-IGW"
            },
            "tags_all": {
              "Name": "project8-IGW"
            },
            "vpc_id": "vpc-016b961155cce63d9"
          },
          "dependencies": [
            "aws_vpc.project8-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "project8-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452076483511:route-table/rtb-00d53514ce87c69da",
            "id": "rtb-00d53514ce87c69da",
            "owner_id": "452076483511",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f313309df4452d7b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project8-route-table"
            },
            "tags_all": {
              "Name": "project8-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-016b961155cce63d9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.project8-igw",
            "aws_vpc.project8-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "project8-pubsub1-RT-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ffc2b8322ac2ee5",
            "route_table_id": "rtb-00d53514ce87c69da",
            "subnet_id": "subnet-06b07f3ba248086bb"
          },
          "dependencies": [
            "aws_internet_gateway.project8-igw",
            "aws_route_table.project8-RT",
            "aws_subnet.project8-pub-sub1",
            "aws_vpc.project8-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "project8-pubsub2-RT-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2c4548cf349c7ee",
            "route_table_id": "rtb-00d53514ce87c69da",
            "subnet_id": "subnet-0586efa2e9d15716b"
          },
          "dependencies": [
            "aws_internet_gateway.project8-igw",
            "aws_route_table.project8-RT",
            "aws_subnet.project8-pub-sub2",
            "aws_vpc.project8-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "project8-pubsub3-RT-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0658e0d426d9c342a",
            "route_table_id": "rtb-00d53514ce87c69da",
            "subnet_id": "subnet-0ade754ee7cc4dc49"
          },
          "dependencies": [
            "aws_internet_gateway.project8-igw",
            "aws_route_table.project8-RT",
            "aws_subnet.project8-pub-sub3",
            "aws_vpc.project8-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "project8-stack-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452076483511:security-group/sg-098423d0728ffe335",
            "description": "project8 SG. Allow ssh from my IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098423d0728ffe335",
            "ingress": [
              {
                "cidr_blocks": [
                  "81.137.235.65/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "proj-8-sg",
            "name_prefix": "",
            "owner_id": "452076483511",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "project8-sg"
            },
            "tags_all": {
              "Name": "project8-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-016b961155cce63d9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project8-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project8-priv-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452076483511:subnet/subnet-016d2385797e5b0d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016d2385797e5b0d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "452076483511",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project8-priv-sub1"
            },
            "tags_all": {
              "Name": "project8-priv-sub1"
            },
            "vpc_id": "vpc-016b961155cce63d9"
          },
          "dependencies": [
            "aws_vpc.project8-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project8-priv-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452076483511:subnet/subnet-08aa183927a861374",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08aa183927a861374",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "452076483511",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project8-priv-sub2"
            },
            "tags_all": {
              "Name": "project8-priv-sub2"
            },
            "vpc_id": "vpc-016b961155cce63d9"
          },
          "dependencies": [
            "aws_vpc.project8-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project8-priv-sub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452076483511:subnet/subnet-061e36b7148b4998c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061e36b7148b4998c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "452076483511",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project8-priv-sub3"
            },
            "tags_all": {
              "Name": "project8-priv-sub3"
            },
            "vpc_id": "vpc-016b961155cce63d9"
          },
          "dependencies": [
            "aws_vpc.project8-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project8-pub-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452076483511:subnet/subnet-06b07f3ba248086bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b07f3ba248086bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "452076483511",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project8-pub-sub1"
            },
            "tags_all": {
              "Name": "project8-pub-sub1"
            },
            "vpc_id": "vpc-016b961155cce63d9"
          },
          "dependencies": [
            "aws_vpc.project8-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project8-pub-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452076483511:subnet/subnet-0586efa2e9d15716b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0586efa2e9d15716b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "452076483511",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project8-pub-sub2"
            },
            "tags_all": {
              "Name": "project8-pub-sub2"
            },
            "vpc_id": "vpc-016b961155cce63d9"
          },
          "dependencies": [
            "aws_vpc.project8-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project8-pub-sub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452076483511:subnet/subnet-0ade754ee7cc4dc49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ade754ee7cc4dc49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "452076483511",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project8-pub-sub3"
            },
            "tags_all": {
              "Name": "project8-pub-sub3"
            },
            "vpc_id": "vpc-016b961155cce63d9"
          },
          "dependencies": [
            "aws_vpc.project8-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project8-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452076483511:vpc/vpc-016b961155cce63d9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-064a4b6366c7491d5",
            "default_route_table_id": "rtb-088d31ff67a44a123",
            "default_security_group_id": "sg-063fed516c98d8ae1",
            "dhcp_options_id": "dopt-08017ba762e8e8d01",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-016b961155cce63d9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-088d31ff67a44a123",
            "owner_id": "452076483511",
            "tags": {
              "Name": "project8-vpc"
            },
            "tags_all": {
              "Name": "project8-vpc"
            }
          }
        }
      ]
    }
  ]
}